spell check commit 1

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class = "Bio_data_para">
         <h3 > Bio </h3>
           <p> <b>Sandeep Aswath Narayana</b> received Bachelor's degree in Electronics and communication engineering form 
-          Visvesvaraya Technological University, India in 2012. He is received Master's degree from the School of
+          Visvesvaraya Technological University, India in 2012. He has received Master's degree from the School of
           Kate Gleason College of Engineering,<b>Rochester Institute of technology</b> USA in 2016. He is currently working as a Deeplearning performance R&D engineer. His research interests 
           include machine learning, real-time embedded system, and computer vision. He is also a neuroscience, physics, & hardware architecture enthusiast. 
           </p>
