--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <p>A Web app that helps draw images that are uploaded by joining points(tracing the image). Using Machine Learning, Python, OpenCV, HTML5, JS and CSS <br></p>
 
                 <li><b>Literade @HackMIT-2015 | Massachusetts Institute of Technology:</b><br></li>
-                <p>A Web app that converts boring articles to colorful for images for children to read. Using Machine Learning, Python, HTML, CSS and JS <br></p>
+                <p>A Web app that converts boring articles to colorful images, for children to read. Using Machine Learning, Python, HTML, CSS and JS <br></p>
 
                 <li><b>Other hackathon attended</b><br></li>
                 <p>Tinder4Food (Android App) @HackNY-2015 | New York University.<br> 
