updates on website error

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <!-- <link rel="stylesheet" href="css/main.css"> -->
 
-    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel='stylesheet' type='text/css'>
   
 
   </head>
