--- a/index.html
+++ b/index.html
@@ -2,24 +2,16 @@
 <html>
 
   <head>
-	<!link rel="stylesheet" href="Web_Sandeep.css">
-	<link rel="stylesheet" media="screen" href="http://openfontlibrary.org/face/myfont1" rel="stylesheet" type="text/css"/>
+	
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Upright" rel="stylesheet">
+
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
-    <!-- <link rel="stylesheet" href="css/main.css"> -->
-
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel='stylesheet' type='text/css'>
-  
 
   </head>
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<style>
 
-</style>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 
@@ -70,9 +62,9 @@
     <div class = "Bio_data" id="Bio" >
       <div class = "Bio_data_para">
         <h3 > Bio </h3>
-          <p> <b>Sandeep Aswath Narayana</b> received Bachelor's degree in Electronics and communication engineering from 
-          Visvesvaraya Technological University, India in 2012. He has received Master's degree from the School of
-          Kate Gleason College of Engineering,<b>Rochester Institute of technology</b> USA in 2016. He is currently working as Software Engineer at Intel Corporation. His research interests 
+          <p> <b>Sandeep Aswath Narayana</b> received Bachelor's degree in Electronics and communication engineering form 
+          Visvesvaraya Technological University, India in 2012. He is received Master's degree from the School of
+          Kate Gleason College of Engineering,<b>Rochester Institute of technology</b> USA in 2016. He is currently working as a Deeplearning performance R&D engineer. His research interests 
           include machine learning, real-time embedded system, and computer vision. He is also a neuroscience, physics, & hardware architecture enthusiast. 
           </p>
           <<a href ="#home"> home </a>> 
@@ -85,7 +77,7 @@
 
               <p>Intel Corporation (Hillsboro, OR): <br>
               <i>Software Engineer </i> (Mar 2016 - date )<br> 
-              Machine/Deep learning for computer vision <br><br>
+             Machine/Deep learning for perceptual intelligence <br><br>
 
               <p>Intel Corporation (Hillsboro, OR): <br>
               <i>Software Engineer Intern</i> (Oct 2015- Dec 2015 )<br> 
@@ -126,7 +118,7 @@
                 <p>A Web app that helps draw images that are uploaded by joining points(tracing the image). Using Machine Learning, Python, OpenCV, HTML5, JS and CSS <br></p>
 
                 <li><b>Literade @HackMIT-2015 | Massachusetts Institute of Technology:</b><br></li>
-                <p>A Web app that converts boring articles to colorful images, for children to read. Using Machine Learning, Python, HTML, CSS and JS <br></p>
+                <p>A Web app that converts boring articles to colorful for images for children to read. Using Machine Learning, Python, HTML, CSS and JS <br></p>
 
                 <li><b>Other hackathon attended</b><br></li>
                 <p>Tinder4Food (Android App) @HackNY-2015 | New York University.<br> 
@@ -212,7 +204,7 @@
 background-image: url("M&T_bank_pic1.jpg");
 }
 .Heading_San h1 {
-  font-family: 'AveriaBold';
+  font-family: 'Cormorant Upright';
   color: #0F1728 !important ;
   
   background-color: #ff5a09;
@@ -224,10 +216,10 @@ background-image: url("M&T_bank_pic1.jpg");
 }
 
 .navbar{
-font-family: 'AveriaBold';
+font-family: 'Cormorant Upright';
 }
 .navbar-title {
-	font-family: 'AveriaBold';
+	font-family: 'Cormorant Upright';
   color: #0F1728 !important ;
   
   background-color: #ff5a09;
@@ -349,7 +341,7 @@ font-family: 'AveriaBold';
     padding-right: 1%;
     background-color: #FFF;
     color: #555;
-    font-family: 'AveriaBold';
+    font-family: 'Cormorant Upright';
 }
 
 #contact {
@@ -406,7 +398,7 @@ blockquote > footer {
 
 
 .Heading_San.navbar-RIT {
-  font-family: 'AveriaBold';
+  font-family: 'Cormorant Upright';
   color: #ff5a09;
   /*margin-left: 40px;*/
   font-size: 23px;
@@ -441,7 +433,7 @@ blockquote > footer {
 }
 .Bio_data{
   margin-top: 50px;
-font-family: 'AveriaBold';
+font-family: 'Cormorant Upright';
 background-color:#393939;
 }
 .Bio_data .Bio_data_para p{
@@ -451,7 +443,7 @@ margin-left: 50px;
 	}
 
 .Projects {
- font-family: 'AveriaBold';
+ font-family: 'Cormorant Upright';
  background-color: #393939;
  
 }
@@ -459,7 +451,7 @@ margin-left: 50px;
 	font-size: 30px;
 	margin-top: 60px;
   margin-left: 50px;
- font-family: 'AveriaBold';
+ font-family: 'Cormorant Upright';
  background-color: #ff5a09;
  
 }
@@ -485,7 +477,7 @@ margin-left: 70px;
   
 }
 .Experiences{
-font-family: 'AveriaBold';
+font-family: 'Cormorant Upright';
 background-color:#393939;
 }
 .Experiences  .Experiences_para p{
