embed video center  minor changes

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 
                 <li><b>OhSnap @HackPrinceton-2015 | Princeton University:</b><br></li>
                 <p>Identification of human finger snaps. Feature exaction using Cepstrum. Random Forest and PCA is used for training on the recorded data. Coding in Python. <br></p>
-                  <iframe width="80%" height="60%"
+                  <p align="30"><iframe width="50%" height="100%"
                   src="https://www.youtube.com/embed/EuO8wyZtxaE">
-                  </iframe>
+                </iframe></p>
                   </b><br>
 
                 <li><b>SketchitUp @BrickHack-2015 | Rochester Institute of Technology:</b><br></li>
@@ -133,10 +133,9 @@
                 <li><b>Moving Target Detection and Aiming:</b><br></li>
                 <p>Designed Arm Robot that can aim at moving targets in real time using a cat toy laser.
                 Regression technique was <br>used for arm movement in MATLAB.<br></p>
-                  <iframe width="80%" height="60%"
-                  src="https://www.youtube.com/embed/e78php0j3WY">
-                  </iframe>
-
+                <p align="30"><iframe width="50%" height="100%"
+                src="https://www.youtube.com/embed/e78php0j3WY">
+                </iframe></p>
 
                 <li><b>e-Data Analysis:</b> <br></li>
                 <p>Descriptive statistic was performed on the quantitative description of stock data and to understand the stock <br>performances of a company.<br></p>
@@ -179,6 +178,7 @@
                     </li>
                 </ul>
             </div>
+            <div class="blank-div"></div>
             <div class="blank-div"></div>
 
         </div>
