--- a/index.html
+++ b/index.html
@@ -163,12 +163,13 @@
 
           <div id="contact-means" class="text-center">
                 <ul class="list-inline">
-                    <span class="dot-span big-dot">.</span>
+
                     <li><strong><em><a class="contact-link" target="_blank" href="https://www.linkedin.com/in/sandeepaswathnarayana"><i class="fa fa-linkedin-square"></i> Linkedin</a></em></strong></li>
                     <span class="dot-span big-dot">.</span>
                     <li><strong><em><a class="contact-link" target="_blank" href="https://github.com/sasadep"><i class="fa fa-github"></i> GitHub</a></em></strong></li>
                     <span class="dot-span big-dot">.</span>
                     <li><strong><em><a class="contact-link" target="_blank" href="https://twitter.com/sasadep"><i class="fa fa-twitter"></i> Twitter</a></em></strong></li>
+                    <span class="dot-span big-dot">.</span>
                     <li>
                         <strong><em>
                             <a class="contact-link" href="mailto:sa5641.rit@gmail.com">
@@ -332,6 +333,10 @@ font-family: 'Cormorant Upright';
 .twitter-link-icon {
     font-size: 2em;
     color: #444;
+}
+.twitter-link-icon-sm {
+    color: #444;
+    font-size: 1.5em;
 }
 
 #contact-title {
