--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
     <div class = "Bio_data" id="Bio" >
       <div class = "Bio_data_para">
         <h3 > Bio </h3>
-          <p> <b>Sandeep Aswath Narayana</b> received Bachelor's degree in Electronics and communication engineering form
+          <p> <b>Sandeep Aswath Narayana received Bachelor's degree in Electronics and communication engineering form
           Visvesvaraya Technological University, India in 2012. He is received Master's degree from the School of
-          Kate Gleason College of Engineering,<b>Rochester Institute of technology</b> USA in 2016. He is currently working as a Deeplearning performance R&D engineer. His research interests
+          Kate Gleason College of Engineering,Rochester Institute of technology USA in 2016. He is currently working as a Deeplearning performance R&D engineer. His research interests
           include machine learning, real-time embedded system, and computer vision. He is also a neuroscience, physics, & hardware architecture enthusiast.
-          </p>
-          <<a href ="#home"> home </a>>
+          </b></p>
+          <a href ="#home"> <b>home</b> </a>
       </div>
     </div>
 
@@ -76,27 +76,27 @@
           <div class = "Experiences_para">
             <h3 > Experiences </h3>
 
-              <li>Intel Corporation (Hillsboro, OR): <br></li>
+              <li><b>Intel Corporation (Hillsboro, OR): <br></li>
               <p><i>Software Engineer </i> (Mar 2016 - date )<br>
-             Machine/Deep learning for perceptual intelligence <br><br>
+             Machine/Deep learning for perceptual intelligence</b> <br><br>
 
-              <li>Intel Corporation (Hillsboro, OR): <br></li>
+              <li><b>Intel Corporation (Hillsboro, OR): <br></li>
               <p><i>Software Engineer Intern</i> (Oct 2015- Dec 2015 )<br>
-              Performance analysis and optimization of machine learning algorithms (Deep Learning) for Computer Vision and Mobile Application. In Torch,OpenCV and TensorFlow.</p><br>
+              Performance analysis and optimization of machine learning algorithms (Deep Learning) for Computer Vision and Mobile Application. In Torch,OpenCV and TensorFlow.</b></p><br>
 
-              <li>Rochester Institute of Technology(Rochester, NY): <br></li>
+              <li><b>Rochester Institute of Technology(Rochester, NY): <br></li>
               <p><i>Research Assistant </i><br>
               @Multi-Core System Lab | (Aug 2014 - Mar 2016) <br>
               Improving thermal performance of multi-core network-on-chip based architectures through a distributed and intelligent proactive thermal-aware task reallocation algorithm. Optimized for faster computation training time of Neural Network.<br>
 
               @Machine Intelligence Lab | (May 2015 – Oct 2015) <br>
-              Developing improved scheme for video classification by going deeper using convolutional neural network for better accuracy and computational time.<br><br>
+              Developing improved scheme for video classification by going deeper using convolutional neural network for better accuracy and computational time.</b><br><br>
 
-              <li>Hindustan Aeronautics Limited (Bangalore, India): <br></li>
+              <li><b>Hindustan Aeronautics Limited (Bangalore, India): <br></li>
               <p><i>Apprentice Engineer</i> (Aug 2012- May 2013 )<br>
               Worked on data analysis of Solid State Digital Video Recording system and Electronic<br> Flight instrument system
-              for fault detection and integration of the system.</p>
-                <<a href ="#home"> home </a>>
+              for fault detection and integration of the system.</b></p>
+              <a href ="#home"> <b>home</b> </a>
           </div>
         </div>
 
@@ -104,52 +104,68 @@
         <h3 > Research paper/ Hackathons/ Projects</h3>
           <div class = "Projects_para ">
 
-                <li><b>An Artificial Neural Networks based Temperature Prediction Framework for Network-on-Chip based Multicore Platform:</b><br></li>
+                <li><b>An Artificial Neural Networks based Temperature Prediction Framework for Network-on-Chip based Multicore Platform:<br></li>
                 <p>Thesis <a href="https://arxiv.org/abs/1612.04197">link </a> <br>
-                Continuous improvement in silicon process technologies has made possible the integration of hundreds of cores on a single chip. However, power and heat have become dominant constraints in designing these massive multicore chips causing issues with reliability, timing variations and reduced lifetime of the chips. Dynamic Thermal Management (DTM) is a solution to avoid high temperatures on the die. Typical DTM schemes only address core level thermal issues. However, the Network-on-chip (NoC) paradigm, which has emerged as an enabling methodology for integrating hundreds to thousands of cores on the same die can contribute significantly to the thermal issues. Moreover, the typical DTM is triggered reactively based on temperature measurements from on-chip thermal sensor requiring long reaction times whereas predictive DTM method estimates future temperature in advance, eliminating the chance of temperature overshoot. Artificial Neural Networks (ANNs) have been used in various domains for modeling and prediction with high accuracy due to its ability to learn and adapt. This thesis concentrates on designing an ANN prediction engine to predict the thermal profile of the cores and Network-on-Chip elements of the chip. This thermal profile of the chip is then used by the predictive DTM that combines both core level and network level DTM techniques. On-chip wireless interconnect which is recently envisioned to enable energy-efficient data exchange between cores in a multicore environment, will be used to provide a broadcast-capable medium to efficiently distribute thermal control messages to trigger and manage the DTM schemes.<br></p>
+                Continuous improvement in silicon process technologies has made possible the integration of hundreds of cores on a single chip. However, power and heat have become dominant constraints in designing these massive multicore chips causing issues with reliability, timing variations and reduced lifetime of the chips. Dynamic Thermal Management (DTM) is a solution to avoid high temperatures on the die. Typical DTM schemes only address core level thermal issues. However, the Network-on-chip (NoC) paradigm, which has emerged as an enabling methodology for integrating hundreds to thousands of cores on the same die can contribute significantly to the thermal issues. Moreover, the typical DTM is triggered reactively based on temperature measurements from on-chip thermal sensor requiring long reaction times whereas predictive DTM method estimates future temperature in advance, eliminating the chance of temperature overshoot. Artificial Neural Networks (ANNs) have been used in various domains for modeling and prediction with high accuracy due to its ability to learn and adapt. This thesis concentrates on designing an ANN prediction engine to predict the thermal profile of the cores and Network-on-Chip elements of the chip. This thermal profile of the chip is then used by the predictive DTM that combines both core level and network level DTM techniques. On-chip wireless interconnect which is recently envisioned to enable energy-efficient data exchange between cores in a multicore environment, will be used to provide a broadcast-capable medium to efficiently distribute thermal control messages to trigger and manage the DTM schemes.
+                </b><br></p>
 
-                <li><b>OhSnap @HackPrinceton-2015 | Princeton University:</b><br></li>
-                <p>Identification of human finger snaps. Feature exaction using Cepstrum. Random Forest and PCA is used for training on the recorded data. Coding in Python. <br></p>
+                <li><b>OhSnap @HackPrinceton-2015 | Princeton University:<br></li>
+                <p>Identification of human finger snaps. Feature exaction using Cepstrum. Random Forest and PCA is used for training on the recorded data. Coding in Python.
+                  </b><br></p>
                   <p align="30"><iframe width="50%" height="100%"
                   src="https://www.youtube.com/embed/EuO8wyZtxaE">
                 </iframe></p>
                   </b><br>
 
-                <li><b>SketchitUp @BrickHack-2015 | Rochester Institute of Technology:</b><br></li>
-                <p>A Web app that helps draw images that are uploaded by joining points(tracing the image). Using Machine Learning, Python, OpenCV, HTML5, JS and CSS <br></p>
+                <li><b>SketchitUp @BrickHack-2015 | Rochester Institute of Technology:<br></li>
+                <p>A Web app that helps draw images that are uploaded by joining points(tracing the image). Using Machine Learning, Python, OpenCV, HTML5, JS and CSS
+                  </b><br></p>
 
-                <li><b>Literade @HackMIT-2015 | Massachusetts Institute of Technology:</b><br></li>
-                <p>A Web app that converts boring articles to colorful for images for children to read. Using Machine Learning, Python, HTML, CSS and JS <br></p>
+                <li><b>Literade @HackMIT-2015 | Massachusetts Institute of Technology:<br></li>
+                <p>A Web app that converts boring articles to colorful for images for children to read. Using Machine Learning, Python, HTML, CSS and JS
+                  </b><br></p>
 
-                <li><b>Other hackathon attended</b><br></li>
+                <li><b>Other hackathon attended<br></li>
                 <p>Tinder4Food (Android App) @HackNY-2015 | New York University.<br>
-                HackBU-2016 | Binghamton University. <br> BrickHack2-2016|Rochester Institute of Technology  <br></p>
+                HackBU-2016 | Binghamton University. <br> BrickHack2-2016|Rochester Institute of Technology
+                </b><br></p>
 
 
 
-                <li><b>Deep Learning for Image Classification:</b><br></li>
-                <p>Deep Neural Networks with feature extraction was implemented for image classification on "calTech101" dataset. <br></p>
+                <li><b>Deep Learning for Image Classification:<br></li>
+                <p>Deep Neural Networks with feature extraction was implemented for image classification on "calTech101" dataset.
+                  </b><br></p>
 
-                <li><b>Moving Target Detection and Aiming:</b><br></li>
+                <li><b>Moving Target Detection and Aiming:<br></li>
                 <p>Designed Arm Robot that can aim at moving targets in real time using a cat toy laser.
-                Regression technique was <br>used for arm movement in MATLAB.<br></p>
+                Regression technique was <br>used for arm movement in MATLAB.
+                </b><br></p>
                 <p align="30"><iframe width="50%" height="100%"
                 src="https://www.youtube.com/embed/e78php0j3WY">
                 </iframe></p>
 
-                <li><b>e-Data Analysis:</b> <br></li>
-                <p>Descriptive statistic was performed on the quantitative description of stock data and to understand the stock <br>performances of a company.<br></p>
-                <li><b>Weather Prediction:</b><br></li>
-                <p>Historical temperature analysis using statistics and temperature prediction using machine learning algorithms<br> like PCA, SVD and Bayesian Networks. <br></p>
-                <li><b>Multi-Channel ADPCM CODEC (MCAC):</b><br></li>
-                <p>Designed the RTL and the verification model for the Adaptive Quantizer and Tone & Transition model and some of<br> their sub models for the pipelined design of MCAC.<br></p>
-                <li><b>Memory Access Bus Arbiter (ARB) of DTMF receiver:</b><br></li>
-                <p>Designed the RTL model and performed verification, logic synthesis, test insertion and detailed timing analysis<br> using Verilog HDL.<br> </p>
-                <li><b>Boundary Scan Sum: </b> <br></li>
-                <p>Hierarchically designed Boundary Scan Sum with optimal sizing, clean DRC and LVS in Cadence Virtuoso, 0.6 micron<br> technology.<br></p>
+                <li><b>e-Data Analysis: <br></li>
+                <p>Descriptive statistic was performed on the quantitative description of stock data and to understand the stock <br>performances of a company.
+                </b><br></p>
+
+                <li><b>Weather Prediction:<br></li>
+                <p>Historical temperature analysis using statistics and temperature prediction using machine learning algorithms<br> like PCA, SVD and Bayesian Networks.
+                  </b><br></p>
+
+                <li><b>Multi-Channel ADPCM CODEC (MCAC):<br></li>
+                <p>Designed the RTL and the verification model for the Adaptive Quantizer and Tone & Transition model and some of<br> their sub models for the pipelined design of MCAC.
+                  </b><br></p>
+
+                <li><b>Memory Access Bus Arbiter (ARB) of DTMF receiver:<br></li>
+                <p>Designed the RTL model and performed verification, logic synthesis, test insertion and detailed timing analysis<br> using Verilog HDL.
+                  </b><br> </p>
+
+                <li><b>Boundary Scan Sum:  <br></li>
+                <p>Hierarchically designed Boundary Scan Sum with optimal sizing, clean DRC and LVS in Cadence Virtuoso, 0.6 micron<br> technology.
+                  </b><br></p>
 
 
-                <<a href ="#home"> home </a>>
+                <a href ="#home"> <b>home</b> </a>
           </div>
         </div>
 
@@ -414,24 +430,26 @@ blockquote > footer {
   background-color: #ff5a09;
   margin-top: 40px;
   margin-left: 50px;
-  font-weight: bold;
   font-size: 30px;
+  color: #444;
 
 }
 .Bio_data{
   margin-top: 50px;
 font-family: 'Cormorant Upright';
-background-color:#393939;
+background-color: #FFF;
+color: #555;
 }
 .Bio_data .Bio_data_para p{
 font-size: 17px;
-color:#ffffff;
+color:#444;
 margin-left: 50px;
 	}
 
 .Projects {
  font-family: 'Cormorant Upright';
- background-color: #393939;
+ background-color: #FFF;
+ color: #555;
 
 }
 .Projects h3{
@@ -440,17 +458,20 @@ margin-left: 50px;
   margin-left: 50px;
  font-family: 'Cormorant Upright';
  background-color: #ff5a09;
+ color: #444;
 
 }
 .Projects .Projects_para li {
 margin-left: 50px;
 font-size: 20px;
-	color:#ff9900;
+	color:#ff5a09;
 
 }
 .Projects .Projects_para p {
 margin-left: 70px;
-	color:#ffffff;
+background-color: #FFF;
+color: #444;
+font-size: 17px;
 
 }
 
@@ -459,24 +480,26 @@ margin-left: 70px;
   background-color: #ff5a09;
   margin-top: 40px;
   margin-left: 50px;
-  font-weight: bold;
   font-size: 30px;
+  color: #444;
 
 }
 .Experiences{
 font-family: 'Cormorant Upright';
-background-color:#393939;
+background-color: #FFF;
+color: #555;
 }
 .Experiences  .Experiences_para p{
 font-size: 17px;
-color:#ffffff;
+background-color: #FFF;
+color: #444;
 margin-left: 50px;
 	}
 
 .Experiences .Experiences_para li {
 margin-left: 50px;
 font-size: 20px;
-	color:#ff9900;
+	color:#ff5a09;
 
 }
 
