--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@
     <div class = "Bio_data" id="Bio" >
       <div class = "Bio_data_para">
         <h3 > Bio </h3>
-          <p> <b>Sandeep Aswath Narayana received Bachelor's degree in Electronics and communication engineering form
-          Visvesvaraya Technological University, India in 2012. He is received Master's degree from the School of
-          Kate Gleason College of Engineering,Rochester Institute of technology USA in 2016. He is currently working as a Deeplearning performance R&D engineer. His research interests
-          include machine learning, real-time embedded system, and computer vision. He is also a neuroscience, physics, & hardware architecture enthusiast.
+          <p> <b>
+            I am a Software Engineer at Intel, currently focused on Deep Learning Performance R&D.
+            I recieved my Master's in Electrical Engineering from Rochester Institute of Technology in 2016, where I was advised by
+            <a href="https://people.rit.edu/axgeec/index.htm">Amlan Ganguly </a> and <a href="https://people.rit.edu/rwpeec/">Ray Ptucha </a>
+            on Multi-Core Systems with NoC Architectures and Deep Learning. Over the course of my Master's I had an internship at Intel,
+            where I worked on creating high performance Deep Learning models for Intel Atom based SoC.
+            I recieved my Bachelor's degree in Electronics and Communication Engineering form Visvesvaraya Technological University, India in 2012.
+            <br><br>I enjoy doing Interdisciplinary Research, and  attending Hackathons. I am a Neuroscience, Physics, and Hardware Architecture enthusiast.
           </b></p>
           <a href ="#home"> <b>home</b> </a>
       </div>
@@ -107,7 +111,7 @@
                 <li><b>An Artificial Neural Networks based Temperature Prediction Framework for Network-on-Chip based Multicore Platform:<br></li>
                 <p>Thesis <a href="https://arxiv.org/abs/1612.04197">link </a> <br>
                 Continuous improvement in silicon process technologies has made possible the integration of hundreds of cores on a single chip. However, power and heat have become dominant constraints in designing these massive multicore chips causing issues with reliability, timing variations and reduced lifetime of the chips. Dynamic Thermal Management (DTM) is a solution to avoid high temperatures on the die. Typical DTM schemes only address core level thermal issues. However, the Network-on-chip (NoC) paradigm, which has emerged as an enabling methodology for integrating hundreds to thousands of cores on the same die can contribute significantly to the thermal issues. Moreover, the typical DTM is triggered reactively based on temperature measurements from on-chip thermal sensor requiring long reaction times whereas predictive DTM method estimates future temperature in advance, eliminating the chance of temperature overshoot. Artificial Neural Networks (ANNs) have been used in various domains for modeling and prediction with high accuracy due to its ability to learn and adapt. This thesis concentrates on designing an ANN prediction engine to predict the thermal profile of the cores and Network-on-Chip elements of the chip. This thermal profile of the chip is then used by the predictive DTM that combines both core level and network level DTM techniques. On-chip wireless interconnect which is recently envisioned to enable energy-efficient data exchange between cores in a multicore environment, will be used to provide a broadcast-capable medium to efficiently distribute thermal control messages to trigger and manage the DTM schemes.
-                </b><br></p>
+                </b><br></p><br>
 
                 <li><b>OhSnap @HackPrinceton-2015 | Princeton University:<br></li>
                 <p>Identification of human finger snaps. Feature exaction using Cepstrum. Random Forest and PCA is used for training on the recorded data. Coding in Python.
@@ -115,20 +119,24 @@
                   <p align="30"><iframe width="50%" height="100%"
                   src="https://www.youtube.com/embed/EuO8wyZtxaE">
                 </iframe></p>
-                  </b><br>
+                  </b><br><br>
 
                 <li><b>SketchitUp @BrickHack-2015 | Rochester Institute of Technology:<br></li>
                 <p>A Web app that helps draw images that are uploaded by joining points(tracing the image). Using Machine Learning, Python, OpenCV, HTML5, JS and CSS
-                  </b><br></p>
+                  </b><br></p><br>
 
                 <li><b>Literade @HackMIT-2015 | Massachusetts Institute of Technology:<br></li>
                 <p>A Web app that converts boring articles to colorful for images for children to read. Using Machine Learning, Python, HTML, CSS and JS
                   </b><br></p>
 
                 <li><b>Other hackathon attended<br></li>
-                <p>Tinder4Food (Android App) @HackNY-2015 | New York University.<br>
-                HackBU-2016 | Binghamton University. <br> BrickHack2-2016|Rochester Institute of Technology
-                </b><br></p>
+                  <ul style="list-style-type:square">
+                <p><li> Tinder4Food (Android App) @HackNY-2015 | New York University.</li>
+                <li> HackBU-2016 | Binghamton University. </li>
+                <li> BrickHack2-2016 | Rochester Institute of Technology</li>
+                </ul>
+                </b><br></p><br>
+
 
 
                 <li><b>Moving Target Detection and Aiming - 2013 : <br></li>
@@ -138,30 +146,30 @@
                 </b><br></p>
                 <p align="30"><iframe width="50%" height="100%"
                 src="https://www.youtube.com/embed/e78php0j3WY">
-                </iframe></p>
+                </iframe></p><br>
 
                 <li><b>e-Data Analysis - 2014 : <br></li>
                 <p>Descriptive statistic was performed on the quantitative description of stock data and to understand the stock <br>performances of a company.
-                </b><br></p>
+                </b><br></p><br>
 
                 <li><b>Weather Prediction - 2014 :<br></li>
                 <p>Historical temperature analysis using statistics and temperature prediction using machine learning algorithms<br> like PCA, SVD and Bayesian Networks.
-                  </b><br></p>
+                  </b><br></p><br>
 
                 <li><b>Multi-Channel ADPCM CODEC (MCAC) - 2013 :<br></li>
                 <p>Designed the RTL and the verification model for the Adaptive Quantizer and Tone & Transition model and some of<br> their sub models for the pipelined design of MCAC.
-                  </b><br></p>
+                  </b><br></p><br>
 
                 <li><b>Memory Access Bus Arbiter (ARB) of DTMF receiver - 2013 :<br></li>
                 <p>Designed the RTL model and performed verification, logic synthesis, test insertion and detailed timing analysis<br> using Verilog HDL.
-                  </b><br> </p>
+                  </b><br> </p><br>
 
                 <li><b>Boundary Scan Sum - 2013 :  <br></li>
                 <p>Hierarchically designed Boundary Scan Sum with optimal sizing, clean DRC and LVS in Cadence Virtuoso, 0.6 micron<br> technology.
-                  </b><br></p>
+                  </b><br></p><br>
 
                   <li><b>Deep Learning for Image Classification  - 2013 : <br></li>
-                  <p>Deep Neural Networks with feature extraction was implemented for image classification on "calTech101" dataset.</b> <br></p>
+                  <p>Deep Neural Networks with feature extraction was implemented for image classification on "calTech101" dataset.</b> <br></p><br>
 
                 <a href ="#home"> <b>home</b> </a>
 
@@ -187,8 +195,8 @@
                     <span class="dot-span big-dot">.</span>
                     <li>
                         <strong><em>
-                            <a class="contact-link" href="mailto:sa5641.rit@gmail.com">
-                                <i class="fa fa-envelope-o"></i> sa5641.rit@gmail.com
+                            <a class="contact-link">
+                                <i class="fa fa-envelope-o"></i> sa5641[dot]rit[at]gmail[dot]com
                             </a>
                         </em></strong>
                     </li>
@@ -434,6 +442,7 @@ blockquote > footer {
   font-size: 30px;
   color: #0F1728 !important
 
+
 }
 .Bio_data{
   margin-top: 50px;
@@ -442,10 +451,15 @@ background-color: #FFF;
 color: #555;
 }
 .Bio_data .Bio_data_para p{
-font-size: 17px;
+font-size: 20px;
 color:#444;
 margin-left: 50px;
 	}
+.Bio_data .Bio_data_para  a {
+  background-color: #FFF;
+  font-size: 20px;
+
+  }
 
 .Projects {
  font-family: 'Cormorant Upright';
@@ -464,15 +478,26 @@ margin-left: 50px;
 }
 .Projects .Projects_para li {
 margin-left: 50px;
-font-size: 20px;
+font-size: 25px;
 	color:#ff5a09;
+
+}
+.Projects .Projects_para ul {
+margin-left: 50px;
+font-size: 20px;
+	color:#444;
 
 }
 .Projects .Projects_para p {
 margin-left: 70px;
 background-color: #FFF;
 color: #444;
-font-size: 17px;
+font-size: 20px;
+
+}
+.Projects .Projects_para a {
+background-color: #FFF;
+font-size: 20px;
 
 }
 
@@ -491,7 +516,7 @@ background-color: #FFF;
 color: #555;
 }
 .Experiences  .Experiences_para p{
-font-size: 17px;
+font-size: 20px;
 background-color: #FFF;
 color: #444;
 margin-left: 50px;
@@ -499,8 +524,14 @@ margin-left: 50px;
 
 .Experiences .Experiences_para li {
 margin-left: 50px;
-font-size: 20px;
+font-size: 25px;
 	color:#ff5a09;
+
+}
+
+.Experiences .Experiences_para a {
+background-color: #FFF;
+font-size: 20px;
 
 }
 
