--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class = "Experiences_para">
             <h3 > Experiences </h3>
 
-              <li><b>Intel Corporation (Hillsboro, OR): <br></li>
+              <li><b>Intel Corporation : <br></li>
               <p><i>Software Engineer </i> (Mar 2016 - date )<br>
              Machine/Deep learning for perceptual intelligence</b> <br><br>
 
