--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <span class="dot-span big-dot">.</span>
                     <li><strong><em><a class="contact-link" target="_blank" href="https://github.com/sasadep"><i class="fa fa-github"></i> GitHub</a></em></strong></li>
                     <span class="dot-span big-dot">.</span>
-                    <li><strong><em><a class="contact-link" target="_blank" href="https://twitter.com/im5andeep"><i class="fa fa-twitter"></i> Twitter</a></em></strong></li>
+                    <li><strong><em><a class="contact-link" target="_blank" href="https://twitter.com/im_5an"><i class="fa fa-twitter"></i> Twitter</a></em></strong></li>
                     <span class="dot-span big-dot">.</span>
                     <li>
                         <strong><em>
